# adventOfCode2015

./: .gitignore  LICENSE  README.md  adventOfCode.cabal  stack.yaml
app/: Main.hs
currentTests/: Main.hs  currentTests.cabal
src/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Graph.hs
test/: CurrentTests.hs  Day10Spec.hs  Day11Spec.hs  Day12Spec.hs  Day13Spec.hs  Day14Spec.hs  Day15Spec.hs  Day16Spec.hs  Day17Spec.hs  Day18Spec.hs  Day1Spec.hs  Day2Spec.hs  Day3Spec.hs  Day4Spec.hs  Day5Spec.hs  Day6Spec.hs  Day7Spec.hs  Day8Spec.hs  Day9Spec.hs
