name:                currentTests
version:             0.1.0.0
synopsis:            Mutable test project for adventOfCode
description:         Please see README.md
homepage:            https://github.com/brianshourd/adventOfCode2015
license:             BSD3
author:              Brian Shourd
maintainer:          brian.shourd@gmail.com
copyright:           2015 Brian Shourd
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      ./
  exposed-modules:     Main
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      ./
  main-is:             Spec.hs
  build-depends:       base
                     , adventOfCode
                     , containers
                     , hspec-discover
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/adventOfCode
